adding unittest